# Thesis_NLP

./: .gitignore  hard_indices.txt  pyproject.toml  run_thesis_colab.ipynb
src/Thesis_NLP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/diploma_tqa/data/: databench_loader.py
src/diploma_tqa/execution/: code_extract.py  pandas_executor.py
src/diploma_tqa/llms/: ollama_client.py
src/diploma_tqa/prompts/: baseline_prompts.py  error_fix_prompts.py
src/diploma_tqa/schema/: schema_linker.py  semantic_state.py
src/diploma_tqa/scripts/: analyze_logs.py  run_smoke_test.py
src/diploma_tqa/tools/: dataframe_tools.py  tool_prompts.py  tool_runner.py
